Refactor progress information display